--- a/assets/style.css
+++ b/assets/style.css
@@ -59,28 +59,34 @@ body {
 
 main {
     margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 auto;
 }
-
 
 .cover-text {
     background: url("/assets/images/The-Antikythera-Mechanism main.jpg") no-repeat center center/cover;
     display: flex;
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 384px;
+    width: 100%;
     height: 384px;
     flex-direction: column;
     justify-content: center;
+    color: var(--text-color);
     
 }
 
 .cover-text h1 {
+    background-color: rgb(0,0,0, 0.6); 
+    background-size: contain;
     text-align: center;
-    background-color: rgb(0,0,0, 0.6);
 }
 
 .mechanism {
-    padding-bottom: 20px;
+    padding-bottom: 25px;
+    padding-left: 20px;
+    padding-right: 20px;
     color: var(--text-color);
 }
 
@@ -89,14 +95,15 @@ main {
 }
 
 #image {
-    width: 348px;
-    height: 213px;
+    min-width: 350px;
+    min-height: 214px;
+    width:100vw;
+    height: 100vw;
     padding-left: 30px;
 }
 
 .origin {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 20px;
     color: var(--text-color);
 }
 
@@ -116,16 +123,29 @@ footer i {
     font-size: 30px;
 }
 
+/* Gallery */
+.gallery {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.pictures img {
+    width: 100%;
+}
 
 @media screen and (min-width: 576px ){
     #image {
         width: 564px;
         height: 385px;
-        padding-left: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
-    .cover-text {
-        width: 576px;
+    .cover-text h1 {
+        text-align: center;
+        color: var(--text-color);
     }
 
     .mechanism {
@@ -158,14 +178,75 @@ footer i {
         justify-content: flex-end;
     }
     
-    #image {
-        width: 696px;
-        height: 427px;
-        padding-left: 70px;
+
+    .cover-text h1 {
+        text-align: center;
     }
 
-    .cover-text {
-        width: 768px;
+    .image {
+        align-items: center;
     }
 
+    .gallery {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pictures img {
+        width: 49%;
+    }
 }
+
+@media screen and (min-width: 992px ) {
+     .cover-text h1 {
+        text-align: center;
+     }
+
+     .pictures img {
+        width: 33%;
+    }
+
+    .contaiiner {
+        display: flex;
+        flex-flow: column wrap;
+    }
+
+    .mechanism {
+        width: 20%;
+    }
+
+    .fragments {
+        width: 20%;
+    }
+
+    .origin {
+        width: 20%;
+    }
+}
+
+
+@media screen and (min-width: 1200px ) {
+    .cover-text h1 {
+       text-align: center;
+    }
+
+    .contaiiner {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .mechanism >div {
+       flex: 1;
+    }
+
+    .fragments {
+        order: 0;
+    }
+
+    .origin {
+        order: 3;
+    }
+}
+
