--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ nav a {
     padding-left: 15px;
     padding-right: 20px;
     color: white;
-    font-size: 60;
+    font-size: 20px;
 }
 
 nav a:hover {
