--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
 
 
 /* Header */
-
 header {
     background-color: var(--primary-color);
     position: fixed;
@@ -27,6 +26,8 @@ header a {
     text-decoration: none;
 }
 
+
+/* Logo */
 #logo {
     text-decoration: none;
     text-transform: uppercase;
@@ -37,7 +38,6 @@ header a {
 }
 
 /* Navigation */
-
 nav a {
     text-decoration: none;
     padding-left: 15px;
@@ -51,7 +51,6 @@ nav a:hover {
 }
 
 /* Main content */
-
 body {
     background-color: var(--background-color);
     min-height: 100vh;
@@ -59,8 +58,9 @@ body {
     flex-direction: column;
 } 
 
+/* Hero Section */
 .cover-text {
-    background: url("../assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
+    background: url("/assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
     display: flex;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -76,6 +76,7 @@ body {
     text-align: center;
 }
 
+/* Mechanism section */
 .mechanism {
     padding: 20px;
     color: var(--text-color);
@@ -96,6 +97,8 @@ body {
     padding: 10px;
 }
 
+
+/* Origin section */
 .origin {
     padding: 20px;
     color: var(--text-color);
@@ -108,6 +111,7 @@ body {
     padding-bottom: 20px;
 }
 
+/* Footer */
 footer {
     display: flex;
     justify-content: space-evenly;
@@ -121,7 +125,6 @@ footer i {
 }
 
 /* Gallery */
-
 .gallery {
     display: flex;
     flex-direction: column;
@@ -133,10 +136,9 @@ footer i {
     width: 100%;
 }
 
-/* Sign Up */
-
+/* Sign Up section*/
 .signup {
-    background: url("../assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
+    background: url("/assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
     padding-top: 100px;
     display: flex;
     justify-content: center;
@@ -164,6 +166,7 @@ footer i {
     padding-bottom: 5px;
 }
 
+/* Media query: Large or landscape phones (576px and up) */
 @media screen and (min-width: 576px ){
     
     .mechanism {
@@ -183,6 +186,7 @@ footer i {
 
 }
 
+/* Media query: Tablets and larger (768px and up) */
 @media screen and (min-width: 768px ){
     
     header  {
@@ -220,6 +224,7 @@ footer i {
     }
 }
 
+/* Media query: Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px ) {
      
     .container {
@@ -257,6 +262,7 @@ footer i {
 
 }
 
+/* Media query: Extra large devices (large laptops and desktops, 1200px and up) */
 @media screen and (min-width: 1200px ) {
     .container {
         display: flex;
