--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ body {
 
 /* Hero Section */
 .cover-text {
-    background: url("/assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
+    background: url("../images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
     display: flex;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -138,7 +138,7 @@ footer i {
 
 /* Sign Up section*/
 .signup {
-    background: url("/assets/images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
+    background: url("../images/The-Antikythera-Mechanism-main.jpg") no-repeat center center/cover;
     padding-top: 100px;
     display: flex;
     justify-content: center;
